--- a/motogp/package.json
+++ b/motogp/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "watch": "^0.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
